--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 * {
+  font-family: 'UniSansBook', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -19,6 +20,17 @@
   font-size: 7vh;
   padding-left: 8vw;
   margin-top: 4vh;
+}
+
+.underline::before{
+  position: absolute;
+  content: " ";
+  width: 3.8em;
+  height: 2vh;
+  background: #28A745;
+  z-index: -1;
+  margin-top: 0.8em;
+  margin-left: 1em;
 }
 
 .input {
