--- a/style.css
+++ b/style.css
@@ -34,9 +34,9 @@
 }
 
 .input {
-  margin-top: 9rem;
+  margin-top: 6rem;
   border: 0;
-  padding: 0 8vw 0;
+  padding: 0 2vw 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -46,12 +46,12 @@
 .input button {
   border: 0;
   font-size: 3vh;
-  padding: 1.5rem;
-  border-radius: 10px;
+  padding: 1rem;
+  border-radius: 12px;
 }
 
 .input input {
-  background-color: rgb(230, 230, 230);
+  background-color: #F5F5F5;
   width: 70vw;
 }
 
